<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="contact_name">Ivan Petrov</string>
    <string name="attach">Attach icon</string>
    <string name="close_icon">Close icon</string>
    <string name="more">More icon</string>
    <string name="back">Back icon</string>
    <string name="name_title">Name</string>
    <string name="phone_title">Phone</string>
    <string name="phone_number">+1(234)567-8900</string>
    <string name="select_title">Select</string>
    <string name="number_type">Mobile</string>
    <string name="address_title">Address</string>
    <string name="address_full">123, Lenin street, Apt. 6</string>
    <string name="city_title">City</string>
    <string name="city_name">Tokyo</string>
    <string name="country_title">Country</string>
    <string name="country_name">Australia</string>
    <string name="date_title">Date</string>
    <string name="date_number">24.10.2025</string>
    <string name="notes_title">Notes</string>
    <string name="notes_full">Loves burgers and french fries</string>
    <string name="save_button">Save</string>
    <string name="cart_title">Cart</string>">
    <string name="items_number">4 items in your cart</string>">
    <string name="list_item_cucumber">Cucumber"</string>">
    <string name="list_item_tomato">Tomato"</string>">
    <string name="list_item_sausage">Sausage"</string>">
    <string name="list_item_ketchup">Ketchup"</string>">
    <string name="category">Category"</string>">
    <string name="category_list_item_cucumber">Category \nA cucumber. Green an healthy!"</string>">
    <string name="category_list_item_tomato">Category \nA tomato. Red and juicy!"</string>">
    <string name="category_list_item_sausage">Category \nA sausage. Unhealthy but tasty!"</string>">
    <string name="category_list_item_ketchup">Category \nA ketchup. Just a ketchup!"</string>">
    <string name="price">$35</string>">
    <string name="total_title">Order Total:</string>">
    <string name="total_price">$175.50</string>">
    <string name="subtotal_title">Subtotal:</string>">
    <string name="subtotal_price">$140.00</string>">
    <string name="shipping_title">Shipping:</string>">
    <string name="shipping_price">$25.00</string>">
    <string name="tax_title">Tax:</string>">
    <string name="tax_price">$10.50</string>">
    <string name="place_order_button">Place order</string>">
    <string name="login">Login</string>">
    <string name="cancel">Cancel</string>">
    <string name="password">Password</string>">
    <string name="reset_password">Reset my password</string>">
    <string name="login_text">ivanpetrov</string>">
    <string name="profile">Profile</string>">
    <string name="password_hidden">**********</string>">

</resources>